--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
       <li><img src="images/doing_nothing.jpg" alt="and Doing Nothing" class="hobbies"><p>And Doing Nothing</p></li>
 </ul>
     </section>
-
-    </main>
+</div>
+    
     <footer>
       <ul>
         <!-- <li><a href="http://facebook.com/kyleham" class="social twitter">Twitter</a></li> -->
