fix errors and warning shown on validator.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Something something..</h2>
         <p>   Was work in digital marketing agency for 4years(2011-2015) as IT Administrator. Was a great experience helping fornt-end team on clients changes when they were busy. ALthough it was just some simple copy or image changes, or just copy and paste the same code with different content.</p>
         <p>This time I decided to learn coding from scratch and looking forward to conquer and master CSS, and write CSS without referring and even refreshing borwser like what my ex-colleague did.</p>
-        <p id="strike"><strike><i>........ok..its little bit over bull-shitting....i just hope i could understand what code i am referring or copying and turn them into my own website.</strike></i></p>
+        <p id="strike">........ok..its little bit over bull-shitting....i just hope i could understand what code i am referring or copying and turn them into my own website.</p>
       </div> 
 
       <div class="card">
